Changed some styles, most of which are fixes for dark mode

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,74 +1,5 @@
 @import './theme.scss';
 @import './typography.scss';
 @import './components.scss';
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  display: grid;
-  gap: 4rem;
-  grid-template-columns: 1fr;
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 2.5rem 1.5rem 2.5rem;
-}
-
-.component-display {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.component-display > .title {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.component-display > .row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.component-display > .row.align-start {
-  justify-content: flex-start;
-}
-
-.component-display > .row:not(:last-child) {
-  margin-block-end: 0.5rem;
-}
-
-.component-display > .row > *:not(:last-child) {
-  margin-inline-end: 0.5rem;
-}
-
-/* Appying styles to app bars for demonstration purposes. Normally these styles shouldn't be used. */
-.component-display > .row > .mdc-top-app-bar {
-  position: relative;
-  top: 0 !important;
-}
-
-.component-display
-  > .row
-  > .mdc-top-app-bar.mdc-top-app-bar--short.mdc-top-app-bar--short-collapsed {
-  width: 112px;
-}
-
-@media only screen and (min-width: 768px) {
-  .container {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media only screen and (min-width: 1440px) {
-  .container {
-    padding: 0 0 1.5rem 0;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
+@import './fonts.scss';
+@import './layout.scss';
