--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,5 +1,5 @@
-:root {
-  --mdc-typography-font-family: 'Roboto', sans-serif;
+*:focus {
+  outline: none;
 }
 
 body {
@@ -8,18 +8,22 @@ body {
 }
 
 .container {
-  display: grid;
-  gap: 4rem;
-  grid-template-columns: 1fr;
+  columns: 1;
+  column-gap: 4rem;
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 2.5rem 1.5rem 2.5rem;
 }
 
 .component-display {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 4rem;
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .component-display > .title {
@@ -49,9 +53,16 @@ body {
 }
 
 /* Appying styles to app bars for demonstration purposes. Normally these styles shouldn't be used. */
+
+.component-display > .row > .mdc-drawer,
 .component-display > .row > .mdc-top-app-bar {
   position: relative;
   top: 0 !important;
+  z-index: inherit;
+}
+
+.component-display > .row > .mdc-list {
+  width: 100%;
 }
 
 .component-display
@@ -60,15 +71,17 @@ body {
   width: 112px;
 }
 
+/* MEDIA QUERIES */
+
 @media only screen and (min-width: 768px) {
   .container {
-    grid-template-columns: 1fr 1fr;
+    columns: 2;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .container {
     padding: 0 0 1.5rem 0;
-    grid-template-columns: 1fr 1fr 1fr;
+    columns: 3;
   }
 }
