--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,8 +1,9 @@
 @import '@material/typography/mdc-typography';
 
-// This sets all <h1>,...,<h6> elements with Material headline1,...,headline6 typography styles
-// Check out the MDC Web documentation for how to use MDC Typography Sass mixins:
-// https://github.com/material-components/material-components-web/tree/master/packages/mdc-typography
+/*  Typography */
+$mdc-typography-font-family: unquote('Roboto, sans-serif');
+
+// Set all <h1>,...,<h6> elements with Material headline1,...,headline6 typography styles
 h1 {
   @include mdc-typography(headline1);
 }
